force-app/main/default/objects/Interviewer__c/Interviewer__c.object-meta.xml
<CustomObject>
    <label>Interviewer</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>