force-app/main/default/objects/Interviewer__c/fields/InterviewerEmail__c.field-meta.xml
<CustomField>
    <fullName>InterviewerEmail__c</fullName>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interviewer Email</label>
    <type>Text</type>
</CustomField>