force-app/main/default/objects/Interviewer__c/fields/InterviewerName__c.field-meta.xml
<CustomField>
    <fullName>InterviewerName__c</fullName>
    <formula>User__r.FirstName + &apos; &apos; + User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interviewer Name</label>
    <type>Text</type>
</CustomField>