force-app/main/default/objects/Interviewer__c/fields/InterviewerStatus__c.field-meta.xml
<CustomField>
    <fullName>InterviewerStatus__c</fullName>
    <label>Interviewer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
                <default>true</default>
                <label>Unavailable</label>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>