force-app/main/default/objects/Interviewer__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Panel</label>
    <referenceTo>Panel__c</referenceTo>
    <relationshipLabel>Interviewers</relationshipLabel>
    <relationshipName>Interviewers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>